--- a/ServiceTests/ServiceTests.csproj
+++ b/ServiceTests/ServiceTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Domain.csproj" />
+    <ProjectReference Include="..\Models\Core.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
